# platform-calibration

./: .gitignore  Calibration_Labbook.org  LICENSE  README.md  README.org  sbatch_plafrim_calibration  sbatch_plafrim_saturation  sbatch_stampede_calibration
data/final_platforms/: old_miriel.xml  sirocco.xml  taurus.xml
data/miriel_27_06_2016/: testplatform.xml  testplatform_Iprobe.csv  testplatform_Isend.csv  testplatform_PingPong.csv  testplatform_Test.csv
data/miriel_27_06_2016/calibration/: Analysis.Rmd  testplatform.Rmd  testplatform.md  testplatform_Recv.csv  testplatform_Wtime.csv  testplatform_breakpoints  testplatform_output.xml
data/miriel_27_06_2016/saturation/: load_alltoall.csv  load_send.csv  load_sendrecv_diff.csv  load_sendrecv_same.csv
data/plafrim_15_06_16/calibration/: Analysis.Rmd  testplatform.Rmd  testplatform.md  testplatform.xml  testplatform_Iprobe.csv  testplatform_Isend.csv  testplatform_PingPong.csv  testplatform_Recv.csv  testplatform_Test.csv  (+3 more)
data/sirocco_01_08_2016/: sbatch_plafrim_calibration
data/sirocco_26_08_2016/: sbatch_plafrim_calibration  sbatch_plafrim_calibration2
data/stampede_17_06_01-17:14/: job_8522008.out
notebooks/: mpi_calibration.ipynb  pyproject.toml
src/calibration/: Analysis.Rmd  Makefile  bp_search1.c  bp_search2.c  calibrate.c  calibrate.h  calibrate_blas.c  experiments.c  experiments.h  find_breakpoints.py  generate_size_file.py  smpi_calibration.sh  test_memory.c  test_ring.c  utils.c  utils.h
src/computation-calibration/: computation-calibration.org
src/saturation/: Makefile  alltoall_loadtest.c
(+109 files in other folders)
